# pm4wasm

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_COMPLETE.md  PM4PY_COVERAGE_ANALYSIS.md  README.md  RELEASE_NOTES_V0.2.0.md  SAAS.md  UNIFICATION_COMPLETE.md  UNIFICATION_PLAN.md  VALIDATION_IMPLEMENTATION_REPORT.md  docker-compose.yml  openapi.yaml
deploy/: DEPLOYMENT.md  grafana-dashboards.yml  grafana-datasources.yml  prometheus.yml
deploy/k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.template.yaml
docs/: INDEX.md  architecture.md  examples.md  llm-integration.md  nl-explanation.md  nl-howto.md  nl-reference.md  nl-tutorial.md  quick-reference.md  reference.md  troubleshooting.md  tutorial.md  vision-2030.md
drift-server/: Cargo.toml
drift-server/src/: alerting.rs  drift.rs  main.rs  metrics.rs  telemetry.rs
examples/: validation-example.ts
js/: .npmignore  CHANGELOG.md  ERROR_HANDLER_IMPLEMENTATION.md  PROMPT_TEMPLATES.md  README.md  debug-test.js  package-lock.json  package.json  pm4wasm-26.4.7.tgz  test-llm-demo.sh  tsconfig.json  vite.config.ts  vite.demo.config.ts  vitest.config.ts
js/demo/: IMPLEMENTATION_SUMMARY.md  README.md  index.html  main.ts  refinement-loop-demo.ts  refinement.html
js/examples/: nl-to-powl-vercel-ai-sdk.ts
js/saas-sdk/: package.json  tsconfig.json
js/src/: error-handler-example.ts  error-handler.test.ts  error-handler.ts  index.ts  llm-prompts.test.ts  llm-prompts.ts  model-generator.ts  predictive.ts  process-modeling-service.ts  prompt-templates-example.ts  prompt-templates.test.ts  prompt-templates.ts  refinement-loop.ts  types.ts  utils.ts  validation.test.ts  validation.ts
server/: .env.example  Dockerfile  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: index.ts
src/: binary_relation.rs  complexity.rs  diff.rs  event_log.rs  footprints.rs  lib.rs  ocel.rs  parser.rs  petri_net.rs  powl.rs  process_tree.rs  streaming.rs  trie.rs
(+98 files in other folders)
