[package]
name = "pm4wasm"
version = "0.1.0"
edition = "2021"
description = "POWL v2 (Partially Ordered Workflow Language) compiled to WebAssembly"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
quick-xml = "0.37"
chrono = { version = "0.4", default-features = false, features = ["serde", "wasmbind"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
