[package]
name = "drift-server"
version = "0.1.0"
edition = "2021"
description = "Real-time process drift detection SaaS with WebSocket ingestion"
license = "Apache-2.0"

[[bin]]
name = "drift-server"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-tungstenite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# Configuration
config = "0.14"

# Rate limiting
governor = "0.6"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
